fixed overflow on mobile

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -18,8 +18,12 @@ header {
   justify-content: space-between;
   margin-top: 40px;
   font-family: Roboto, sans-serif;
-  font-size: 2rem;
+  font-size: 1.6rem;
   font-weight: 700;
+
+  @media only screen and (min-width: 768px) {
+    font-size: 2rem;
+  }
 
   .header_logo {
     a {
@@ -50,7 +54,11 @@ header {
     }
 
     li {
-      margin: 0 15px;
+      margin: 0 5px;
+
+      @media only screen and (min-width: 768px) {
+        margin: 0 15px;
+      }
     }
   }
 
